--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-name: Travelogue
-description: 'A minimal, single-column Jekyll theme that provides an immersive read experience for your readers'
+name: Daniel McCann
+description: 'Art-Oriented Graphics Engineer'
 
 baseurl: '' # the subpath of your site, e.g. /blog
-url: 'http://yourdomain.com' # the base hostname & protocol for your site
+url: 'mccannd.github.io' # the base hostname & protocol for your site
 
 # Build settings
 markdown:            kramdown
@@ -15,9 +15,9 @@ paginate:            8
 paginate_path:       page/:num/
 
 author:
-    name: 'Salvatore Gentile'
-    email: ''
-    uri: 'https://github.com/SalGnt'
+    name: 'Daniel McCann'
+    email: 'danjm30@gmail.com'
+    uri: 'https://github.com/mccannd'
 
 sass:
     sass_dir: _sass
@@ -34,8 +34,8 @@ defaults:
         show_tags: true
         show_categories: true
         # Social
-        share_buttons: true
-        disqus: true
+        share_buttons: false
+        disqus: false
 
 gems:
     - jekyll-feed
